chore: Prevent text-wrapping in green buttons.

--- a/ddm/core/static/ddm_core/css/research_interface/ddm-buttons.css
+++ b/ddm/core/static/ddm_core/css/research_interface/ddm-buttons.css
@@ -5,6 +5,7 @@
 
 .ddm-btn-green {
     background: #009c94;
+    text-wrap: nowrap;
 }
 
 .ddm-btn-inverted {
